Some additions to ImgMap (use button tag for Vimium, fix map size) fix sizing on mobile, footer in general

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,17 +1,20 @@
 @import "vars";
 
+html {
+  height: 100%;
+}
+
 body {
   display: grid;
-  grid-template-columns: 1fr minmax(auto, 1200px) 1fr;
+  grid-template-columns: 1fr minmax(auto, $bp-l) 1fr;
   grid-template-areas:
     "hero hero hero"
     "nav nav nav"
     ". content ."
     "foot foot foot";
   grid-template-rows: auto auto 1fr auto;
-
+  min-height: 100%;
   margin: 0;
-  min-height: 100vh;
 
   background-color: $gray-1;
   font-family: "Computer Modern Sans", sans-serif;
